Transform link Lowercase

--- a/_terms.store.pug
+++ b/_terms.store.pug
@@ -18,12 +18,12 @@
         },
         {
           caption: 'Owner of the Card',
-          link: 'legal_owner_of_the_Card',
+          link: 'legal_owner_of_the_card',
           content: '<p>The card remains the property of the Bank and is subject to immediate return by the Bank.</p>'
         },
         {
           caption: 'Use of the Card',
-          link: 'legal_use_of_the_Card',
+          link: 'legal_use_of_the_card',
           content: '<p>The Customer shall use the Card in a satisfactory manner as required from time to time by the Bank. The decision as to whether the Card is being so used rests with the Bank.</p> <p>The Bank is authorized to debit or credit the Customer`s Account with all Card transactions effected.</p> <p>The Bank will encode the card with a PIN, which will give the Customer the ability to withdraw cash and to buy goods and/or services by means of the card.</p> <p>The Customer must sign a sales voucher issued by a Merchant in respect of each Card transaction concluded with a Merchant. Failure to sign such a sales voucher does not exempt the Customer from the Customer`s liability to the Bank for any payment made by the Bank in respect of the use of the card.</p> <p>The Online payment Service will be available to those Customers whose registrations for the Online Payment Service were successful.</p> <p>The Customer must obtain access to the Internet in order to make use of the Online Payment Service. The Customer is solely responsible for the acquisition, installation and maintenance of the connection to the Internet and any related costs will be borne by the Customer. In the event that the Card is linked to more than one account, the Card transaction will be effected against the account nominated by the Customer.</p> <p>The Bank will not be liable to the Customer:</p> <ul> <li>If any Merchant/On line Merchant refuses to accept the Customer`s Card as payment or</li> <li>For any goods, purchased or services obtained with the Customer`s Card, and the Customer will not have the right to claim anything from the Bank or to institute any counterclaim against or to apply set - off against the Bank on this basis.</li> </ul> <p>No dispute between the Merchant/On Line Merchant and the Customer will give the   Customer the right to:</p> <ul> <il>be exempted from the Customer`s obligations for payment made by the Bank to the Merchant/ On Line Merchant; or</il> <il>Instruct the Bank to stop any payment to a Merchant/ On Line Merchant, or to reverse a payment which has already been made.</il> </ul> <p>The Bank shall not be party to any dispute between the Customer and any service provider appointed by the Customer to establish the Customer`s Internet infrastructure. </p> <p>The Bank will not be liable for any damages the Customer may suffer as a result of a network breakdown, systems failure, equipment, and malfunction, defect of the Customer`s computer hardware/software or internet infrastructure or resulting from events beyond the Bank`s control.</p>'
         },
         {
@@ -53,7 +53,7 @@
         },
         {
           caption: 'Cancellation of Card',
-          link: 'legal_cancellation_of_Card',
+          link: 'legal_cancellation_of_card',
           content: '<p>The Bank retains the right, at any time to cancel, suspend, repeal or demand the return of the Card, without the Bank losing any right to any claim which the Bank may have against the Customer.</p> <p>In the event that the Customer wants to terminate the right to use the Card, the Customer must cut through the magnetic strip of the Card and send it to the Bank, together with a written notice that the right to use the Card be terminated.</p> <p>In the event that the Customer fails to cut the Card as directed in 11.2, and it is used without the Customer`s authority, the Customer will be held liable.</p>'
         },
         {
