--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
-@import 'css/keyframes.css';
+@import './keyframes.css';
 
 body {
     background: linear-gradient(#5f5f5f, #131313) fixed;
@@ -120,10 +120,25 @@ body {
 }
 
 .figma:nth-child(odd):hover {
+    cursor: pointer;
     background-color: rgb(194, 194, 194);
     transform: scale(1.2);
 }
 
 .animation-1 {
-    animation: figmanim 5s ease-in-out infinite;
+    animation: figmanim 10s ease-in-out infinite;
+}
+
+.animation-2 {
+    animation: figmaanim-2 3s cubic-bezier(.24,.63,.81,.43) infinite;
+    animation-delay: 7s;
+}
+
+.animation-3:last-of-type {
+    animation: figmaanim-3 3s cubic-bezier(.24,.63,.81,.43) infinite;
+}
+
+.animation-3:last-of-type:hover {
+    cursor: pointer;
+    animation-play-state: paused;
 }
