--- a/css/keyframes.css
+++ b/css/keyframes.css
@@ -1,69 +1,14 @@
-@keyframes figmanim {
+@keyframes company1 {
     0% {
-        transform: rotate(0deg);
-        background-color: #000000;
+        color: #c0c0c0;
     }
-    25% {
-        transform: rotate(90deg);
-        background-color: #333333;
+    25%{
+        color: rgb(255, 255, 255);
     }
     50% {
-        transform: rotate(180deg);
-        background-color: #5c5c5c;
-    }
-    75% {
-        transform: rotate(270deg);
-        background-color: #222222;
+        color: #e6e6e6;
     }
     100% {
-        transform: rotate(360deg);
-        background-color: #000000;
+    color: #c0c0c0;
     }
 }
-
-@keyframes figmaanim-2 {
-    0% {
-        transform: rotate(0deg);
-        background-color: #ffffff;
-    }
-    25% {
-        transform: rotate(90deg);
-        background-color: #cccccc;
-    }
-    50% {
-        transform: rotate(180deg);
-        background-color: #5c5c5c;
-    }
-    75% {
-        transform: rotate(270deg);
-        background-color: #cccccc;
-    }
-    100% {
-        transform: rotate(360deg);
-        background-color: #ffffff;
-    }
-}
-
-@keyframes figmaanim-3 {
-    0% {
-        transform: rotate(0deg);
-        background-color: #000000;
-    }
-    25% {
-        transform: rotate(90deg);
-        background-color: #333333;
-    }
-    50% {
-        transform: rotate(180deg);
-        background-color: #5c5c5c;
-    }
-    75% {
-        transform: rotate(270deg);
-        background-color: #222222;
-    }
-    100% {
-        transform: rotate(360deg);
-        background-color: #000000;
-    }
-}}
-
