--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,10 @@ body {
     width: 60px;
     height: 25px;
 }
+
+button {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+}
