--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,178 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-@import './keyframes.css';
+* {
+    padding: 0;
+    margin: 0;
+}
 
 body {
-    background: linear-gradient(#5f5f5f, #131313) fixed;
-    margin: 0;
+    background-color: white;
 
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
 
-    font-family: 'Quicksand';
+    font-family: 'Poppins';
+
+    --color: #7000ff;
+    --size: 17px;
 }
 
 .main {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+
+    /*width: 50rem;*/
+    /*height: 500px; */
+    /* border: 5px solid red; */
+
+    position: relative;
+}
+
+.a_new_era {
+    position: absolute;
+    transform: translate(250px, -200px);
+    font-size: 40px;
+}
+
+.a_new_era:nth-child(2) {
+    position: absolute;
+    transform: translate(250px, -160px);
+    font-size: 40px;
+}
+
+.dop_text {
+    position: absolute;
+    transform: translate(250px, -100px);
+    font-size: 30px;
+}
+
+.dop_text_2 {
+    position: absolute;
+    transform: translate(250px, -60px);
+    font-size: 30px;
+}
+
+.losefat {
+    position: absolute;
+    transform: translate(250px, 20px);
+}
+
+.Howitworks {
+    position: absolute;
+    transform: translate(480px, 20px);
+}
+
+.aside {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    
+    z-index: -1;
+    position: relative;
+}
+
+.image {
+    display: flex;
+    
+    position: relative;
+
+    height: 50vw;
+
+
+    transform: translate(1050px, -80px);
+}
+
+.imagefut {
+    position: absolute;
+    width:50vw;
+    inset: 0 0 0 auto;
+}
+
+
+.button1 {
+    display: flex;
+    justify-content: center;
+}
+
+.losefat {
+    min-width: 150px;
+    min-height: 40px;
+
+    align-items: center;
+
+    font-size: 25px;
+    padding: 10px;
+    color: rgba(255, 255, 255, 1);
+
+    background: rgba(123, 97, 255, 1);
+}
+
+.Howitworks {
+    min-width: 150px;
+    min-height: 40px;
+
+    align-items: center;
+    font-size: 25px;
+
+    padding: 10px;
+
+    border: 2px solid var(--color);
+}
+
+header {
+    display: flex;
+    margin-top: 30px;
 
     justify-content: center;
     align-items: center;
+    gap: 100px;
+}
 
-    min-height: 100%;
+.fitfusion {
+    display: flex;
+    margin-right: 370px;
+
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.fitfusion::before {
+    content: attr(data-fitfusion);
+    color: var(--color);
+}
+
+.fitfusion::after {
+    content: attr(data-fitfusion-1);
+}
+
+.home {
+    color: var(--color);
+    font-size: var(--size);
+}
+
+.workouts,
+.diets,
+.faq,
+.signin {
+    font-size: var(--size);
+}
+
+.signin {
+    display: flex;
+    margin-left: 370px;
+}
+
+.register {
+    border: 2px solid blueviolet;
+    align-items: center;
+    padding: 10px;
+}
+
+button {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer;
 }
