--- a/css/style.css
+++ b/css/style.css
@@ -1,164 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@import url(./keyframes.css);
+
 * {
     padding: 0;
     margin: 0;
 }
 
 body {
-    background-color: white;
-
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+
+    background-color: rgb(255, 255, 255);
 
     min-width: 100vw;
     min-height: 100vh;
 
     font-family: 'Poppins';
 
-    --color: #7000ff;
-    --size: 17px;
-
-    --header-size: 68px;
+    --color: red;
+    --color-1: black;
+    --color-2: rgb(32, 255, 188);
 }
 
-header {
-    position: relative;
-    z-index: 1;
-
-    display: flex;
-    gap: 100px;
-    justify-content: space-between;
-    align-items: center;
-
-    padding: 0 24px;
-
-    min-height: var(--header-size);
-}
-
-.header__menu {
-    display: inline-flex;
-    gap: 60px;
-    
-    font-size: 20px;
-}
-
-.main {
+.container-logo {
     display: flex;
     align-items: center;
-    flex: 1 1;
     
-    margin-top: calc(var(--header-size) * -1);
-    padding: var(--header-size) 24px 24px;
+    
+    padding: 48px;
 
-    position: relative;
-
-    /* background-color: red;  */
-}
-
-
-.aside {
-    position: absolute;
-    inset: 0 0 0 60%;
-
-    max-height: 100%;
-    overflow: hidden;
-}
-
-.aside img {
-    /* object-fit: cover;
-    object-position: top right; */
-
-    width: 100%;
-    /* height: auto; */
-}
-
-.title {
-    font-size: 40px;
-}
-
-.text {
-    font-size: 30px;
-}
-
-
-button {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-
-    min-width: 150px;
-    min-height: 40px;
-
-    padding: 10px;
-
-    font-size: 25px;
-    color: white;
-
-    cursor: pointer;
-
-    background-color: #7000ff;
-    border: 2px solid var(--color);
-}
-
-.button.--light {
-    color: currentColor;
-    background-color: transparent;
-}
-
-.buttons {
-    margin-top: 15px;
-}
-
-.button.--line {
-    border: 2px solid var(--color);
-}
-
-.button.--light.singin {
-    border: none;
-}
-
-.button.--line.reg {
-    border: 2px solid var(--color);
-    color: var(--color);
-    background-color: rgba(255, 255, 255, 0);
-}
-
-.button.--line.howit {
-    border: 2px solid var(--color);
-    background-color: white;
-    color: black;
-    margin-left: 50px;
+    /* filter: blur(50px); */
+    /* border: 5px solid red; */
 }
 
 .logo {
-    font-size: 30px;
-    font-weight: 700;
-}
+    width: 17.5rem;
+    height: 17.5rem;
 
-.logo span:first-child {
-    color:var(--color);
-}
+    border-radius: 50%;
 
-.title {
-    line-height: 42px;
-}
+    border: 0.625rem solid white;
 
-.text {
-    line-height: 32px;
-}
+    box-shadow: 10px 20px var(--color), 15px -12px var(--color-1), -20px -10px var(--color-2);
 
-a {
-    margin-left: 110px;
-    color: black;
-
-    text-decoration: none;
-}
-
-.logo, .header__menu, .header_right, .main__left  {
-    max-width: 1440px;
-    width: 100%;
-
-    margin: 0 auto;
-    padding: 0 24px;
+    animation: scalelogo 1.5s ease;
 }
